--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for ssafy-2024-backend on 2024-12-17T15:14:18+09:00
+# fly.toml app configuration file generated for ssafy-2024-backend-muddy-grass-2266 on 2024-12-17T15:14:18+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ssafy-2024-backend'
+app = 'ssafy-2024-backend-muddy-grass-2266'
 primary_region = 'nrt'
 
 [build]
